--- a/src/app/features/dias-horarios/dias-horarios.component.css
+++ b/src/app/features/dias-horarios/dias-horarios.component.css
@@ -2,10 +2,14 @@
     background-color: #A5D6A7;
 }
 
-.card, select {
+.card, select, input {
     background-color: #F5F5F5;
 }
 
 h3 {
     color: #388E3C;
+}
+
+.container-fluid {
+    min-height: 100vh
 }
