--- a/src/app/features/dias-horarios/dias-horarios.component.html
+++ b/src/app/features/dias-horarios/dias-horarios.component.html
@@ -1,8 +1,8 @@
-<div class="background d-flex justify-content-center align-items-center h-100 p-3">
+<div class="container-fluid background d-flex justify-content-center align-items-center h-100 p-3">
     <div class="container p-1">
-        <h3 class="text-center mb-4">Selecione seu bairro e veja os dias e horários de coleta</h3>
+        <h3 class="text-center my-1">Selecione seu bairro e veja os dias e horários de coleta</h3>
 
-        <div class="mb-4 text-center p-1">
+        <div class="mb-3 text-center p-1">
           <label for="selectBairro" class="form-label text-light-emphasis">Escolha seu bairro</label>
           <select id="selectBairro" class="form-select form-select-sm">
             <option value="" selected disabled>Selecione um bairro</option>
@@ -15,6 +15,51 @@
             <p class="card-text"><strong>Horário:</strong> <span id="horario"> Entre as </span></p>
             <p class="card-text"><strong>Dias:</strong> <span id="dias"></span></p>
           </div>
+        </div>
+
+        <div id="contribuirHorario" class="mt-3 p-2 text-center">
+          <h3 class="text-center">Melhore a precisão dos horários de coleta</h3>
+          <div class="row g-3 align-items-center mt-1">
+            <form [formGroup]="inputsForm">
+
+              <div class="col-md-12 mb-3">
+                <label for="selectBairro" class="form-label text-light-emphasis">Escolha seu bairro</label>
+                <select id="selectBairro" class="form-select form-select-sm form-control" formControlName="bairro">
+                  <option value="" selected disabled>Selecione um bairro</option>
+                </select>
+              </div>
+
+              <div class="col-md-12 mb-3">
+                <label for="selectDiaSemana" class="form-label">Dia da Semana</label>
+                <select id="selectDiaSemana" class="form-select form-control" formControlName="diaSemana">
+                  <option value="" selected disabled>Selecione o dia</option>
+                  <option value="Segunda-feira">Segunda-feira</option>
+                  <option value="Terça-feira">Terça-feira</option>
+                  <option value="Quarta-feira">Quarta-feira</option>
+                  <option value="Quinta-feira">Quinta-feira</option>
+                  <option value="Sexta-feira">Sexta-feira</option>
+                  <option value="Sábado">Sábado</option>
+                  <option value="Domingo">Domingo</option>
+                </select>
+              </div>
+            
+              <!-- Inserção do horário -->
+              <div class="col-md-12 mb-3">
+                <label for="inputHorario" class="form-label">Horário Exato</label>
+                <input 
+                  type="time" 
+                  class="form-control" 
+                  id="inputHorario" 
+                  aria-label="Informe o horário exato"
+                  formControlName="horario"
+                >
+              </div>
+            
+              <!-- Botão de envio -->
+              <div class="text-center">
+                <button class="btn btn-success" id="submitHorario" [disabled]="!inputsForm.valid">Enviar</button>
+              </div>
+            </form>
         </div>
     </div>
 </div>
