--- a/src/app/features/windows/windows.component.css
+++ b/src/app/features/windows/windows.component.css
@@ -18,3 +18,12 @@
 h5 {
     color: #388E3C;
 }
+
+.full-screen {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    box-sizing: border-box; 
+}
