--- a/src/app/features/dias-horarios/dias-horarios.component.html
+++ b/src/app/features/dias-horarios/dias-horarios.component.html
@@ -5,16 +5,25 @@
   
       <div class="mb-3 text-center p-2">
         <label for="selectBairro" class="form-label text-light-emphasis">Escolha seu bairro</label>
-        <select id="selectBairro" class="form-select form-select-sm">
+        <select 
+          id="selectBairro" 
+          class="form-select form-select-sm"
+          [(ngModel)]="selectedDistrictForViewCollect" 
+          (change)="onDistrictSelected(selectedDistrictForViewCollect)">
           <option value="" selected disabled>Selecione um bairro</option>
+          <option *ngFor="let district of districts" [value]="district.name">
+            {{ district.name }}
+          </option>
         </select>
       </div>
       
-      <div id="infoColeta" class="card p-2 d-none">
-        <div class="card-body">
-          <p class="card-text"><strong>Turno:</strong> <span id="turno"></span></p>
-          <p class="card-text"><strong>Horário:</strong> <span id="horario"> Entre as </span></p>
-          <p class="card-text"><strong>Dias:</strong> <span id="dias"></span></p>
+      <div id="infoColeta" class="card p-2" *ngIf="collections.length > 0">
+        <div *ngFor="let collection of collections">
+          <div class="card-body">
+            <p class="card-text"><strong>Dia da Semana: </strong> <span>{{ collection.dayOfWeek }}</span></p>
+            <p class="card-text"><strong>Turno: </strong> <span>{{ collection.shift }}</span></p>
+            <p class="card-text"><strong>Horário Previsto: </strong> <span>{{ collection.schedule }}</span></p>
+          </div>
         </div>
       </div>
     </div>
@@ -29,8 +38,16 @@
 
           <div class="col-md-12 mb-3">
             <label for="selectBairro" class="form-label text-light-emphasis">Escolha seu bairro</label>
-            <select id="selectBairro" class="form-select form-select-sm form-control" formControlName="bairro">
+            <select
+              id="selectBairro"
+              class="form-select form-select-sm form-control"
+              formControlName="bairro"
+              [(ngModel)]="selectedDistrictForSchedule"
+            >
               <option value="" selected disabled>Selecione um bairro</option>
+              <option *ngFor="let district of districts" [value]="district.name">
+                {{ district.name }}
+              </option>
             </select>
           </div>
 
@@ -38,13 +55,13 @@
             <label for="selectDiaSemana" class="form-label">Dia da Semana</label>
             <select id="selectDiaSemana" class="form-select form-control" formControlName="diaSemana">
               <option value="" selected disabled>Selecione o dia</option>
-              <option value="Segunda-feira">Segunda-feira</option>
-              <option value="Terça-feira">Terça-feira</option>
-              <option value="Quarta-feira">Quarta-feira</option>
-              <option value="Quinta-feira">Quinta-feira</option>
-              <option value="Sexta-feira">Sexta-feira</option>
-              <option value="Sábado">Sábado</option>
-              <option value="Domingo">Domingo</option>
+              <option value="MONDAY">Segunda-feira</option>
+              <option value="TUESDAY">Terça-feira</option>
+              <option value="WEDNESDAY">Quarta-feira</option>
+              <option value="THURSDAY">Quinta-feira</option>
+              <option value="FRIDAY">Sexta-feira</option>
+              <option value="SATURDAY">Sábado</option>
+              <option value="SUNDAY">Domingo</option>
             </select>
           </div>
 
@@ -56,77 +73,33 @@
               id="inputHorario" 
               aria-label="Informe o horário exato"
               formControlName="horario"
+              (change)="updateShift()"
+            >
+          </div>
+
+          <div class="col-md-12 mb-3">
+            <label for="inputTurno" class="form-label">Turno</label>
+            <input 
+              type="text" 
+              class="form-control" 
+              id="inputTurno"
+              [value]="shift !== null ? Shift[shift] : ''" 
+              disabled
             >
           </div>
 
           <div class="text-center">
-            <button class="btn btn-success" id="submitHorario" [disabled]="!inputsForm.valid">Enviar</button>
+            <button
+             class="btn btn-success" 
+             id="submitHorario" 
+             [disabled]="!inputsForm.valid"
+             (click)="updateScheduleByDistrictAndDayWeek()"
+             >
+              Enviar
+            </button>
           </div>
         </form>
       </div>
     </div>
   </section>
-  
-  
-  <!-- <div class="container p-1">
-        <h3 class="text-center my-1">Selecione seu bairro e veja os dias e horários de coleta</h3>
-
-        <div class="mb-3 text-center p-1">
-          <label for="selectBairro" class="form-label text-light-emphasis">Escolha seu bairro</label>
-          <select id="selectBairro" class="form-select form-select-sm">
-            <option value="" selected disabled>Selecione um bairro</option>
-          </select>
-        </div>
-        
-        <div id="infoColeta" class="card p-2">
-          <div class="card-body">
-            <p class="card-text"><strong>Turno:</strong> <span id="turno"></span></p>
-            <p class="card-text"><strong>Horário:</strong> <span id="horario"> Entre as </span></p>
-            <p class="card-text"><strong>Dias:</strong> <span id="dias"></span></p>
-          </div>
-        </div>
-
-        <div id="contribuirHorario" class="mt-3 p-2 text-center">
-          <h3 class="text-center">Melhore a precisão dos horários de coleta</h3>
-          <div class="row g-3 align-items-center mt-1">
-            <form [formGroup]="inputsForm">
-
-              <div class="col-md-12 mb-3">
-                <label for="selectBairro" class="form-label text-light-emphasis">Escolha seu bairro</label>
-                <select id="selectBairro" class="form-select form-select-sm form-control" formControlName="bairro">
-                  <option value="" selected disabled>Selecione um bairro</option>
-                </select>
-              </div>
-
-              <div class="col-md-12 mb-3">
-                <label for="selectDiaSemana" class="form-label">Dia da Semana</label>
-                <select id="selectDiaSemana" class="form-select form-control" formControlName="diaSemana">
-                  <option value="" selected disabled>Selecione o dia</option>
-                  <option value="Segunda-feira">Segunda-feira</option>
-                  <option value="Terça-feira">Terça-feira</option>
-                  <option value="Quarta-feira">Quarta-feira</option>
-                  <option value="Quinta-feira">Quinta-feira</option>
-                  <option value="Sexta-feira">Sexta-feira</option>
-                  <option value="Sábado">Sábado</option>
-                  <option value="Domingo">Domingo</option>
-                </select>
-              </div>
-
-              <div class="col-md-12 mb-3">
-                <label for="inputHorario" class="form-label">Horário Exato</label>
-                <input 
-                  type="time" 
-                  class="form-control" 
-                  id="inputHorario" 
-                  aria-label="Informe o horário exato"
-                  formControlName="horario"
-                >
-              </div>
-
-              <div class="text-center">
-                <button class="btn btn-success" id="submitHorario" [disabled]="!inputsForm.valid">Enviar</button>
-              </div>
-            </form>
-        </div>
-    </div> -->
 </div>
